# elasticsearch-web-service

./: .gitignore  README.md
elastic-web/: Cargo.toml  Makefile
elastic-web/src/: lib.rs  main.rs
