[package]
name = "elastic-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elasticsearch = "8.5.0-alpha.1"
tokio = { version = "*", features = ["full"] }
actix-web = "4.0.0-beta.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"

